# matter-of-taste

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: core_ci.yml
matter_of_taste/: main.py
matter_of_taste/models/: nutrition_report.py  nutrition_result.py  recipe.py
matter_of_taste/recipe_components/: calories_calculator.py  data_gathering.py  recipe_scraper.py  recipe_translator.py
matter_of_taste/report_generators/: cli_table_report_generator.py  csv_report_generator.py  report_generator.py  stdout_report_generator.py
matter_of_taste/user_interface/: arguments_parsing.py
src/: calories_calculator.py  control_flow.py  data_gathering.py  main.py  recipe.py  recipe_scraper.py  recipe_translator.py
src/models/: nutrition_report.py  nutrition_result.py  recipe.py  servings.py
src/recipe_components/: calories_calculator.py  data_gathering.py  recipe_scraper.py
src/user_interface/: arguments_parsing.py
test/: conftest.py  test_calories_calculator.py  test_data_gathering.py  test_nutrition_result.py  test_recipe.py  test_recipe_scraper.py  test_recipe_translator.py
test/models/: test_nutrition_result.py  test_recipe.py
test/recipe_components/: test_data_gathering.py  test_recipe_translator.py
test/user_interface/: test_arguments_parsing.py
