[tool.poetry]
name = "matter-of-taste"
version = "0.1.0"
description = "Library to calculate calories for a given recipe from Kwestia Smaku website."
authors = ["Mateusz Kuniczuk <mateuszkuniczuk98@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "matter_of_taste"}]

# TODO Not up to date as poetry isn't used. Update.
[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
pytest = "^7.2.1"
translate = "^3.6.1"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
poetry = "^1.3.1"
rich = "3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
