[tool.poetry]
name = "matter-of-taste"
version = "0.1.0"
description = "Library to calculate calories for a given recipe from Kwestia Smaku website."
authors = ["Mateusz Kuniczuk <mateuszkuniczuk98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pytest = "^8.0.1"
translate = "^3.6.1"
nltk = "^3.8.1"
python-dotenv = "^1.0.1"
dacite = "^1.8.1"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
